--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: go
-go:
-- 1.3.3
-- 1.4.2
-- 1.5.0
-- tip
+           
+go:        
+    - 1.3.3
+    - 1.4.2
+    - 1.5.0                                                                                                           
+    - tip  
+           
+before_install:
+    - pip install --user codecov
+after_success:
+    - codecov
 
