--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: go
-           
-go:        
+       
+go:    
     - 1.3.3
     - 1.4.2
-    - 1.5.0                                                                                                           
-    - tip  
-           
-before_install:
-    - pip install --user codecov
+    - 1.5.0
+    - tip
+       
+script:                                                                                                               
+    - go test -coverprofile=coverage.txt -covermode=atomic
+       
 after_success:
-    - codecov
+    - bash <(curl -s https://codecov.io/bash)
 
