--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: go
 
 go:
-    - 1.7
-    - 1.8
-    - 1.9
-    - 1.10
-    - tip
+    - "1.7"
+    - "1.8"
+    - "1.9"
+    - "1.10"
+    - "tip"
 
 script:
     - go test -coverprofile=coverage.txt -covermode=atomic
